docs: more cleanup

--- a/docs/overrides/partials/footer.html
+++ b/docs/overrides/partials/footer.html
@@ -90,9 +90,10 @@
 
         <!-- prefix logo -->
         <div class="md-footer-meta__item md-footer-meta__item--prefix-logo">
-            <a href="https://prefix.dev" target="_blank">
-                <img src="{{ 'assets/logo_dark.svg' | url }}" alt="">
-            </a>
+          <a href="https://prefix.dev" target="_blank">
+            <img class="prefix-logo prefix-logo__dark" src="{{ 'assets/prefix_logo_dark.svg' | url }}" alt="">
+            <img class="prefix-logo prefix-logo__light" src="{{ 'assets/prefix_logo_light.svg' | url }}" alt="">
+          </a>
         </div>
 
         <!-- Social links -->
