--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -405,6 +405,12 @@
   display:none !important;
 }
 
+
+.md-typeset .md-button {
+  border-radius: 0.5rem;
+  color: var(--md-accent-fg-color);
+}
+
 /* Admonition colors using brand palette */
 .md-typeset .admonition.note,
 .md-typeset details.note {
